--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "author": "Badescu Theodor <theo@btheo.com>",
   "license": "Apache License",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
     "vue-router": "^2.5.1"
