--- a/server/composer.json
+++ b/server/composer.json
@@ -6,5 +6,16 @@
             "email": "theo@btheo.com"
         }
     ],
-    "require": {}
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/"
+        }
+    },
+    "require": {
+        "monolog/monolog": "^1.22",
+        "pimple/pimple": "^3.0",
+        "hassankhan/config": "^0.10.0",
+        "vlucas/phpdotenv": "^2.4",
+        "cboden/ratchet": "^0.3.6"
+    }
 }
