--- a/server/composer.json
+++ b/server/composer.json
@@ -16,6 +16,8 @@
         "pimple/pimple": "^3.0",
         "hassankhan/config": "^0.10.0",
         "vlucas/phpdotenv": "^2.4",
-        "cboden/ratchet": "^0.3.6"
+        "cboden/ratchet": "^0.3.6",
+        "defuse/php-encryption": "^2.0",
+        "illuminate/database": "^5.4"
     }
 }
