--- a/server/composer.json
+++ b/server/composer.json
@@ -18,6 +18,7 @@
         "vlucas/phpdotenv": "^2.4",
         "cboden/ratchet": "^0.3.6",
         "defuse/php-encryption": "^2.0",
-        "illuminate/database": "^5.4"
+        "illuminate/database": "^5.4",
+        "robmorgan/phinx": "^0.8.0"
     }
 }
