--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
   "author": "Badescu Theodor <theo@btheo.com>",
   "license": "Apache License",
   "dependencies": {
+    "@google/maps": "^0.3.1",
     "bootstrap": "^3.3.7",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "node-sass": "^4.5.2",
     "sass-loader": "^6.0.3",
+    "vue-google-autocomplete": "^1.0.8",
     "vue-router": "^2.5.1"
   }
 }
