--- a/server/composer.json
+++ b/server/composer.json
@@ -19,6 +19,8 @@
         "cboden/ratchet": "^0.3.6",
         "defuse/php-encryption": "^2.0",
         "illuminate/database": "^5.4",
-        "robmorgan/phinx": "^0.8.0"
+        "robmorgan/phinx": "^0.8.0",
+        "guzzlehttp/guzzle": "~6.0",
+        "cmfcmf/openweathermap-php-api": "^2.2"
     }
 }
