--- a/server/composer.json
+++ b/server/composer.json
@@ -21,6 +21,7 @@
         "illuminate/database": "^5.4",
         "robmorgan/phinx": "^0.8.0",
         "guzzlehttp/guzzle": "~6.0",
-        "cmfcmf/openweathermap-php-api": "^2.2"
+        "cmfcmf/openweathermap-php-api": "^2.2",
+        "predis/predis": "^1.1"
     }
 }
