:dash: Latest modifications for live branch.

--- a/server/.env
+++ b/server/.env
@@ -9,9 +9,9 @@ DATABASE_PATH = "storage/database/database.sqlite"
 # MySQL
 DATABASE_HOST = '127.0.0.1'
 DATABASE_PORT = 3306
-DATABASE_NAME = '360forecast.ml'
+DATABASE_NAME = '360forecast'
 DATABASE_USER = 'root'
-DATABASE_PASSWORD = ''
+DATABASE_PASSWORD = 'ERNnfFh9Ax2PUn9NLnFW'
 
 WEATHER_API_KEY = "f1773843695bae11bd807ab536493c6c"
 
